wrap components in storeContext and fix routing

--- a/src/index.css
+++ b/src/index.css
@@ -58,10 +58,66 @@ body {
   }
 
   .badge-brown {
-    @apply bg-brown text-white text-xs px-2 py-1 rounded;
+    @apply bg-brown-200 text-brown-dark text-sm px-2 py-1 rounded;
   }
 
   .badge-green {
-    @apply bg-green text-white text-xs px-2 py-1 rounded;
+    @apply bg-green-100 text-green-800 text-sm px-2 py-1 rounded;
   }
+  .badge-blue {
+    @apply bg-blue-200  text-blue-800 text-sm px-2 py-1 rounded;
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeOutRight {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+}
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeOutLeft {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(20px);
+  }
+}
+.animate-fadeInRight {
+  animation: fadeInRight 0.3s ease-out forwards;
+}
+.animate-fadeOutRight {
+  animation: fadeOutRight 0.3s ease-out forwards;
+}
+.animate-fadeInLeft {
+  animation: fadeInLeft 0.3s ease-out forwards;
+}
+.animate-fadeOutLeft {
+  animation: fadeOutLeft 0.3s ease-out forwards;
 }
